# glob

./: .travis.yml  CHANGELOG.txt  CREDITS.txt  Glob.cabal  LICENSE.txt  README.txt
.github/workflows/: test.yml
System/FilePath/: Glob.hs
System/FilePath/Glob/: Base.hs  Compile.hs  Directory.hs  Match.hs  Optimize.hs  Primitive.hs  Simplify.hs  Utils.hs
tests/: Base.hs  Compiler.hs  Main.hs  Optimizer.hs  README.txt  Regression.hs  Utils.hs
tests/Tests/: Base.hs  Compiler.hs  Directory.hs  Instances.hs  Matcher.hs  Optimizer.hs  Regression.hs  Simplifier.hs  Utils.hs
