Cabal-Version: >= 1.2

Name:        Glob
Version:     0.1
Homepage:    http://iki.fi/matti.niemenmaa/glob/
Synopsis:    Globbing library
Category:    System
Stability:   provisional
Description:
   A library for globbing: matching patterns against file paths.

Author:       Matti Niemenmaa
Maintainer:   Matti Niemenmaa <matti.niemenmaa+glob@iki.fi>
License:      BSD3
License-File: LICENSE.txt

Build-Type: Simple

Extra-Source-Files: tests/README.txt
                    tests/*.hs
                    tests/Tests/*.hs

Library
   Build-Depends: base       >= 3 && < 5
                , containers == 0.*
                , directory  == 1.*
                , filepath   == 1.*
                , mtl        == 1.*

   Exposed-Modules: System.FilePath.Glob
   Other-Modules:   System.FilePath.Glob.Base
                    System.FilePath.Glob.Compile
                    System.FilePath.Glob.Directory
                    System.FilePath.Glob.Match
                    System.FilePath.Glob.Optimize
                    System.FilePath.Glob.Utils
